--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "js-yaml": "^4.1.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "vue": "^3.2.13",
@@ -27,7 +28,9 @@
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-cli": "^0.1.2"
+    "tailwindcss-cli": "^0.1.2",
+    "vite-plugin-raw": "^1.0.3",
+    "yaml-loader": "^0.8.1"
   },
   "eslintConfig": {
     "root": true,
