backend for refresh mechanism

--- a/backend/src/config/config.yaml
+++ b/backend/src/config/config.yaml
@@ -1,11 +1,15 @@
 DEVELOPMENT:
   DATABASE_URI: "mssql+pyodbc://sa:test123@DESKTOP-QF7OOTB/InventoryManagement?driver=ODBC+Driver+17+for+SQL+Server"
+  REFRESH_INTERVAL_MINUTES: 1
 
 TEST:
   DATABASE_URI: ''
+  REFRESH_INTERVAL_MINUTES: 1
 
 STAGING:
   DATABASE_URI: ''
+  REFRESH_INTERVAL_MINUTES: 1
 
 PRODUCTION:
   DATABASE_URI: ''
+  REFRESH_INTERVAL_MINUTES: 1
