Add new screens

--- a/frontend/src/assets/config/home.yaml
+++ b/frontend/src/assets/config/home.yaml
@@ -6,7 +6,8 @@ home:
     page03: "リアルタイム中間在庫余力日数"
     page04: "中間在庫推移"
     page05: "汎用テーブル表示"
-    page06 : "画面選択"
+    page07 : "画面選択"
+    page06: "在庫管理マスタ設定画面"
   title:
     updatedate: "最終更新日 :"
     updateFrequency: "更新頻度 :"
