--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "core-js": "^3.8.3",
     "js-yaml": "^4.1.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.0"
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.0",
+    "vue3-datepicker": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
