--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
     "js-yaml": "^4.1.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "papaparse": "^5.5.3",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0",
