--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-annotation": "^3.1.0",
     "core-js": "^3.8.3",
     "file-saver": "^2.0.5",
     "js-yaml": "^4.1.0",
