Dynamic Table screen completed

--- a/frontend/src/assets/config/home.yaml
+++ b/frontend/src/assets/config/home.yaml
@@ -1,7 +1,7 @@
 home:
   header:
     companyName: "NOx組付け工程在庫管理システム"
-    page01: "リアルタイム中間在庫画面"
+    page01: "リアルタイム中間在庫"
     page02: "リアルタイム棚札ステータス"
     page03: "リアルタイム中間在庫余力日数"
     page04: "中間在庫推移"
